# prefGP

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: requirements-checkpoint.txt
inference/: advi_full-Copy1.py  advi_full.py  advi_full_old.py  advi_sparse.py  laplace_generic.py  laplace_sparse.py  slice_sampler.py
inference/.ipynb_checkpoints/: advi_full-checkpoint.py  advi_sparse-checkpoint.py
kernel/: __init__.py  jaxrbf.py  linear.py  rbf.py  sumlinrbf.py
kernel/.ipynb_checkpoints/: jaxlinear-checkpoint.py
model/: LuceJND.py  PlackettLuceGP.py  __init__.py  abstractModel.py  choiceGPytorch.py  erroneousChoice.py  erroneousChoice_full.py  erroneousPreference.py  exactPreference.py  gaussianNoisePreferenceFull.py  gaussianNoisePreferenceSparse.py
model/.ipynb_checkpoints/: LuceJND-checkpoint.py  (+8 more)
notebooks/: Choosing_cupcakes.ipynb  Choosing_ellipse_images  Choosing_ellipses.ipynb  DatasetsTMP.ipynb  GPy_preferenceKernels.py  Game_dataset.ipynb  IoT_DCE_Thermostats.ipynb  Mobility_LabelPreference.ipynb  ModeCanada.ipynb  MovieLens.ipynb  Simple_SinCos_example.ipynb  SparseGP_for_scaling.ipynb  Thermal_comfort_object_preference.ipynb  Thermal_comfort_object_prefrence.ipynb  Thermal_confort_object_test_ADVI.ipynb  Three_Desserts_label_preferences.ipynb  Three_desserts_label_preference.ipynb  Train.ipynb  no_conflict_choices_2.csv  no_conflict_choices_3.csv  testchoice.py  testtrain.py  train_dataset.Rmd  train_dataset.nb.html
utility/: __init__.py  choice_dataset.py  generate_movieData.py  linalg.py  paramz.py
(+31 files in other folders)
